--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,88 +1,135 @@
 
 .header_container {
     width: 100%; 
-    height: 10%; 
+    height: 10%;
     padding-left: 2%; 
     padding-right: 2%;
-    padding-top: 50px;
-    padding-bottom: 30px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin: 0 auto;
     position: relative;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    display: inline-flex;
+    transition: all 1s ease;
 }
 
-.flexStart {
-    justify-content: flex-start;
-    align-items: center;
+.logo_wrapper {
     display: flex;
-}
-.logo_image{
-    width: 30%; 
-    height: 30%;
-    transition: all 0.3s ease;
+    align-items: center;
+    position: relative;
+    transition: all 1s ease;
 }
 
-.logoText {
-    width: 170px; /* Changed from 170px to 12% */
+.logo_image{
+    width: 50px; 
+    height: 50px;
+    background-image: url('/gittan_logo.svg');
+    background-size: cover;
+    background-position: center;
+    transition: all 1s ease;
+}
+
+.logo_text {
+    width: 100%;
     color: black;
     font-size: 28px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
     word-wrap: break-word;
-    transition: all 1.5s ease;
+    transition: all 1s ease; 
 }
 
-.spacer {
-    width: 25%; /* Changed from 360px to 25% */
-    height: 2%; /* Changed from 19px to 2% */
+.spacer{
+    width: 100px;
+    height: 100px;
 }
 
 .menu_wrapper {
+
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 18px; /* Changed from 18px to 1% */
+    gap: 18px; 
     display: flex;
 }
 
 .menuItem {
+    position: relative; 
+    display: inline-block; 
     color: black;
     font-size: 20px;
     font-family: 'Nanum Gothic';
     font-weight: 400;
     word-wrap: break-word;
-    transition: all 1.5s ease;
-}
+    transition: all 1s ease;
+    cursor: pointer;
+  }
+  
+  .menuItem::after {
+    content: '';
+    position: absolute;
+    width: 0; 
+    height: 2px; 
+    background-color: black;
+    bottom: 0;
+    left: 0;
+    transition: width 1s ease; 
+  }
+  
+  .menuItem:hover::after {
+    width: 100%;
+  }
+  
 
-/* CSS for mobile devices */
-@media (max-width: 320px) {
-    /* header */
-    .logoText{
+@media (max-width: 480px) {
+    .header_container {
+        flex-direction: column;
+    }
+    .spacer{
+        height: 20px;
+    }
+    .logo_image{
+        width: 30px; 
+        height: 30px;
+    }
+
+    .logo_text{
         font-size: 18px;
     }
-    .menuItem {
-        font-size: 8px; /* Adjust the font size for mobile devices */
-    }
-}
 
-/* CSS for tablet devices */
-@media (min-width: 321px) and (max-width: 980px) {
-    /* header */
-    .logoText{
-        font-size: 20px; /* Adjust the font size for tablet devices */
-    }
     .menuItem {
-        font-size: 14px; /* Adjust the font size for tablet devices */
+        font-size: 8px;
     }
-}
+  }
+  
+  @media (min-width: 481px) and (max-width: 768px) {
+    .header_container {
+        flex-direction: column;
+    }
+    .spacer{
+        height: 20px;
+    }
+    .logo_image{
+        width: 40px; 
+        height: 40px;
+    }
 
-/* CSS for laptop and desktop devices */
-@media (min-width: 980px) {
-    /* header */
-    .logoText{
-        font-size: 28px;
+    .logo_text{
+        font-size: 20px;
     }
+
     .menuItem {
-        font-size: 20px; /* Adjust the font size for laptop and desktop devices */
+        font-size: 12px;
     }
-}
+  }
+  
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .logo_text{
+        font-size: 24px;
+    }
+
+    .menuItem {
+        font-size: 16px;
+    }
+  }
+  
