--- a/src/styles/introduce.module.css
+++ b/src/styles/introduce.module.css
@@ -5,7 +5,7 @@
     background: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .main_container {
