--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -1,52 +1,14 @@
 /* home.module.css */
 
-.container {
+.wrapper {
     width: 100%;
     height: 100%;
     position: relative;
     background: white;
 }
 
-/* main */
-.main_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+.main_container{
 
-.main_image {
-    width: 100%;
-    height: 520px;
-    left: 0;
-    top: 104px;
-    position: absolute;
-    background-image: url(/main_img.svg);
-    background-size: cover;
-    background-position: center;
-}
-
-.overlay {
-    width: 100%;
-    height: 520px;
-    left: 0;
-    top: 104px;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.60);
-}
-
-.overlay_text{
-    width: 100%;
-    height: 100%;
-    left: 123px;
-    top: 264px;
-    position: absolute;
-    color: white;
-    font-size: 36px;
-    font-family: 'Nanum Gothic';
-    font-weight: 600;
-    word-wrap: break-word;
-    transition: all 1.5s ease;
 }
 
 .performance_text{
@@ -73,21 +35,8 @@
     display: inline-flex;
   } 
 
-/* footer */
-
-
 /* CSS for mobile devices */
 @media (max-width: 320px) {
-    /* header */
-    .logoText{
-        font-size: 18px;
-    }
-    .menuItem {
-        font-size: 8px; /* Adjust the font size for mobile devices */
-    }
-    .overlay_text{
-        font-size: 24px;
-    }
     .performance_text{
         font-size: 18px;
     }
@@ -95,16 +44,6 @@
 
 /* CSS for tablet devices */
 @media (min-width: 321px) and (max-width: 980px) {
-    /* header */
-    .logoText{
-        font-size: 20px; /* Adjust the font size for tablet devices */
-    }
-    .menuItem {
-        font-size: 14px; /* Adjust the font size for tablet devices */
-    }
-    .overlay_text{
-        font-size: 30px;
-    }
     .performance_text{
         font-size: 24px;
     }
@@ -112,16 +51,6 @@
 
 /* CSS for laptop and desktop devices */
 @media (min-width: 980px) {
-    /* header */
-    .logoText{
-        font-size: 28px;
-    }
-    .menuItem {
-        font-size: 20px; /* Adjust the font size for laptop and desktop devices */
-    }
-    .overlay_text{
-        font-size: 36px;
-    }
     .performance_text{
         font-size: 30px;
     }
