--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,43 +1,100 @@
 .footer_container {
     width: 100%;
-    height: 237px;
-    padding-top: 58px;
-    padding-bottom: 57px;
-    padding-left: 70px;
-    padding-right: 474px;
+    height: 300px;
+    padding-left: 10%;
+    /* padding-right: 10%; */
     top: 2500px;
     position: relative;
     background: #373737;
-    justify-content: flex-start;
     align-items: center;
-    display: inline-flex;
+    display: flex;
+    border: 3px solid red;
 }
 
 .footer_text_wrapper {
     width: 100%;
-    align-self: stretch;
+    gap: 30px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid red;
+    transition: all 1s ease; 
 }
 
 .footer_title_text {
-    left: 0;
-    top: 0;
-    position: absolute;
     color: white;
     font-size: 24px;
     font-family: 'Nanum Gothic';
     font-weight: 600;
     word-wrap: break-word;
+    transition: all 1s ease; 
 }
 
-.footer_content_text {
-    left: 0;
-    top: 55px;
-    position: absolute;
+.footer_content_container{
+    border: 1px solid red;
+}
+.footer_content{
+    display: flex;
+}
+.footer_content div{
     color: white;
     font-size: 20px;
     font-family: 'Nanum Gothic';
     font-weight: 400;
     line-height: 32px;
     word-wrap: break-word;
+    transition: all 1s ease; 
 }
+
+@media (max-width: 480px) {
+    .footer_title_text{
+        font-size: 12px;
+    }
+
+    .footer_content_text{
+        font-size: 8px;
+    }
+    .footer_content{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .footer_content div{
+        font-size: 8px;
+    }
+  }
+  
+  @media (min-width: 481px) and (max-width: 768px) {
+    .footer_title_text{
+        font-size: 16px;
+    }
+
+    .footer_content_text{
+        font-size: 12px;
+    }
+    .footer_content{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .footer_content div{
+        font-size: 12px;
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .footer_title_text{
+        font-size: 20px;
+    }
+
+    .footer_content_text{
+        font-size: 16px;
+    }
+.footer_content{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .footer_content div{
+        font-size: 16px;
+    }
+  }
+  
