--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,4 +1,3 @@
-
 .header_container {
     width: 100%; 
     height: 10%;
@@ -12,6 +11,7 @@
     justify-content: space-between;
     align-items: center;
     transition: all 1s ease;
+    border: 3px solid red;
 }
 
 .logo_wrapper {
@@ -91,11 +91,9 @@
         width: 30px; 
         height: 30px;
     }
-
     .logo_text{
         font-size: 18px;
     }
-
     .menuItem {
         font-size: 8px;
     }
@@ -112,11 +110,9 @@
         width: 40px; 
         height: 40px;
     }
-
     .logo_text{
         font-size: 20px;
     }
-
     .menuItem {
         font-size: 12px;
     }
@@ -126,7 +122,6 @@
     .logo_text{
         font-size: 24px;
     }
-
     .menuItem {
         font-size: 16px;
     }
