--- a/src/styles/PerformanceItem.module.css
+++ b/src/styles/PerformanceItem.module.css
@@ -1,40 +1,105 @@
 .container{
+    width: 300px;
+    height: 200px;
     position: relative;
-    width: 300;
-    height: 200;
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-content: center; */
+    justify-content: center;
+    align-items: center;
+    transition: all 1s ease;
 }
 
 .performance_image{
-    width: 100%;
+    width: 300px;
     height: 200px;
-    left: 0;
-    top: 0;
     position: absolute;
+    top: 0px;
     background-size: cover;
     background-position: center;
+    transition: all 1s ease;
 }
 
 .layer{
-    width: 300;
-    height: 200;
-    left: 0;
-    top: 0; 
+    width: 300px;
+    height: 200px;
     position: absolute;
+    top: 0px;
     background: rgba(0, 0, 0, 0.30);
+    transition: all 1s ease;
 }
 
 .text{
-    left: 105; 
-    top: 91; 
-    position: absolute; 
-    text-align: justify; 
+    position: absolute;
     color: white;
-    font-size: 16; 
+    font-size: 16px; 
     font-family: 'Nanum Gothic'; 
     font-weight: 700;
     word-wrap: break-word;
+    transition: all 1s ease;
 }
+
+@media (max-width: 480px) {
+    .container{
+        width: 80px;
+        height: 50px;
+   }
+
+   .performance_image{
+       width: 80px;
+       height: 50px;
+   }
+
+   .layer{
+    width: 80px;
+    height: 50px;
+   }
+
+   .text{
+       font-size: 8px; 
+   }
+}
+  
+  
+
+  @media (min-width: 481px) and (max-width: 768px) {
+    .container{
+        width: 120px;
+        height: 80px;
+   }
+
+   .performance_image{
+    width: 120px;
+    height: 80px;
+   }
+
+   .layer{
+    width: 120px;
+    height: 80px;
+   }
+
+   .text{
+       font-size: 12px; 
+   }
+  }
+
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .container{
+        width: 200px;
+        height: 120px;
+   }
+
+   .performance_image{
+    width: 200px;
+    height: 120px;
+   }
+
+   .layer{
+    width: 200px;
+    height: 120px;
+   }
+
+   .text{
+    font-size: 14px; 
+   }
+  }
+  
