--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -2,23 +2,22 @@
     width: 100%;
     height: 300px;
     padding-left: 10%;
-    /* padding-right: 10%; */
-    top: 2500px;
     position: relative;
     background: #373737;
-    align-items: center;
     display: flex;
-    border: 3px solid red;
+    justify-content: center;
+    align-items: center;
+    /* border: 3px solid red; */
+    transition: all 1s ease; 
 }
 
 .footer_text_wrapper {
     width: 100%;
-    gap: 30px;
+    gap: 10px;
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    border: 1px solid red;
+    justify-content: space-evenly;
     transition: all 1s ease; 
 }
 
@@ -32,7 +31,7 @@
 }
 
 .footer_content_container{
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 .footer_content{
     display: flex;
@@ -42,12 +41,15 @@
     font-size: 20px;
     font-family: 'Nanum Gothic';
     font-weight: 400;
-    line-height: 32px;
+    line-height: 160%;
     word-wrap: break-word;
     transition: all 1s ease; 
 }
 
 @media (max-width: 480px) {
+    .footer_container {
+        height: 150px;
+    }
     .footer_title_text{
         font-size: 12px;
     }
@@ -65,6 +67,10 @@
   }
   
   @media (min-width: 481px) and (max-width: 768px) {
+    .footer_container {
+        height: 200px;
+    }
+
     .footer_title_text{
         font-size: 16px;
     }
@@ -82,6 +88,9 @@
   }
   
   @media (min-width: 769px) and (max-width: 1024px) {
+    .footer_container {
+        height: 250px;
+    }
     .footer_title_text{
         font-size: 20px;
     }
@@ -89,7 +98,8 @@
     .footer_content_text{
         font-size: 16px;
     }
-.footer_content{
+
+    .footer_content{
         display: flex;
         flex-wrap: wrap;
     }
@@ -97,4 +107,4 @@
         font-size: 16px;
     }
   }
-  
+
