--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
     transition: all 1s ease;
-    border: 3px solid red;
+    /* border: 3px solid red; */
 }
 
 .logo_wrapper {
