--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -1,20 +1,28 @@
-/* home.module.css */
-
 .wrapper {
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
     position: relative;
     background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .main_container{
-
+    display: flex;
+    height: 500px;
+    width: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    /* border: 2px solid green; */
+    transition: all 1.5s ease;
 }
 
 .performance_text{
-    left: 627px;
-    top: 690px;
-    position: absolute;
     text-align: center;
     color: #1C1C1C;
     font-size: 30px;
@@ -24,34 +32,53 @@
     transition: all 1.5s ease;
 }
 
-.flexContainer {
+.flex_container {
     width: 100%;
-    left: 78px;
-    top: 788px;
-    position: absolute;
-    justify-content: flex-start;
-    align-items: flex-end;
-    gap: 29px;
-    display: inline-flex;
+    height: 200px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2px;
+    transition: all 1.5s ease;
+    /* border: 1px solid red; */
   } 
 
-/* CSS for mobile devices */
-@media (max-width: 320px) {
+    @media (max-width: 480px) {
+        .performance_text{
+            font-size: 12px;
+        }
+        .main_container{
+            height: 250px;
+        }
+        .flex_container{
+            height: 50px;
+        }
+    }
+  
+
+  @media (min-width: 481px) and (max-width: 768px) {
     .performance_text{
         font-size: 18px;
     }
-}
+    .main_container{
+        height: 350px;
+    }
 
-/* CSS for tablet devices */
-@media (min-width: 321px) and (max-width: 980px) {
+    .flex_container{
+        height: 100px;
+    }
+  }
+
+  @media (min-width: 769px) and (max-width: 1024px) {
     .performance_text{
         font-size: 24px;
     }
-}
 
-/* CSS for laptop and desktop devices */
-@media (min-width: 980px) {
-    .performance_text{
-        font-size: 30px;
+    .main_container{
+        height: 400px;
     }
-}
+
+    .flex_container{
+        height: 150px;
+    }
+  }
