--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
     /* border: 3px solid red; */
     transition: all 1s ease; 
 }
