--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -12,7 +12,7 @@
     align-items: center;
     transition: all 1s ease;
     box-sizing: border-box;
-    border: 3px solid red;
+    /* border: 3px solid red; */
 }
 
 .logo_wrapper {
@@ -20,6 +20,7 @@
     align-items: center;
     position: relative;
     transition: all 1s ease;
+    text-decoration: none;
 }
 
 .logo_image{
