--- a/src/styles/introduceCo.module.css
+++ b/src/styles/introduceCo.module.css
@@ -13,14 +13,14 @@
 }
 
 .banner_container {
+    position: relative;
     height: 520px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
     transition: all 1s ease;
-    border: 3px solid red;
+    /* border: 3px solid red; */
 }
 
 .main_image {
@@ -87,7 +87,7 @@
     align-items: center;
     margin-top: 100px;
     gap: 30px;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     transition: all 1s ease;
 }
 
@@ -96,7 +96,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 30px;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     transition: all 1s ease;
 }
 
@@ -133,7 +133,7 @@
     justify-content: center;
     align-items: center;
     margin: 100px 0px 100px 0px;
-    border: 3px solid blue;
+    /* border: 3px solid blue; */
     transition: all 1s ease;
 }
 
@@ -146,7 +146,7 @@
     justify-content: flex-start;
     align-items: flex-end;
     gap: 29px;
-    border: solid 2px #274FC1;
+    /* border: solid 2px #274FC1; */
     transition: all 1s ease;
 }
 
