--- a/src/styles/constructionPerformance.module.css
+++ b/src/styles/constructionPerformance.module.css
@@ -66,7 +66,7 @@
     align-items: center;
     gap: 40px;
     transition: all 1s ease;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .img_container{
@@ -78,23 +78,72 @@
     align-items: center;
     gap: 40px;
     transition: all 1s ease;
-    border: 4px solid brown;
+    /* border: 4px solid brown; */
 }
 
 .img {
     width: 300px;
     height: 252px;
-    border: 2px solid black;
+    border: 1px solid black;
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: transparent; /* 텍스트를 초기에 숨깁니다 */
+    color: transparent;
 }
 
 .img:hover {
     filter: brightness(60%);
-    color: white; /* 텍스트를 보이게 만듭니다 */
+    color: white; 
 }
+
+@media (max-width: 480px) {
+    .img_wrapper{
+        height: 450px;
+        gap: 10px;
+    }
+    .img_container{
+        width: 80%;
+        height: 100px;
+        gap: 10px;
+    }
+    .img {
+        width: 150px;
+        height: 100px;
+    }
+  }
+  
+  @media (min-width: 481px) and (max-width: 768px) {
+    .img_wrapper{
+        height: 650px;
+        gap: 20px;
+    }
+        
+    .img_container{
+        width: 80%;
+        height: 150px;
+        gap: 20px;
+    }
+    .img {
+        width: 200px;
+        height: 150px;
+    }
+  }
+  
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .img_wrapper{
+        height: 800px;
+        gap: 30px;
+    }
+    .img_container{
+        width: 80%;
+        height: 200px;
+        gap: 30px;
+    }
+    .img {
+        width: 250px;
+        height: 200px;
+    }
+  }
