--- a/src/styles/helixPiles.module.css
+++ b/src/styles/helixPiles.module.css
@@ -68,7 +68,7 @@
     /* border: 4px solid red; */
 }
 
-.banner_menuItem1 {
+.banner_menuItem2 {
     width: 50%;
     height: 100%;
     position: relative;
@@ -85,7 +85,7 @@
     /* border: 3px solid green; */
 }
 
-.banner_menuItem2 {
+.banner_menuItem1 {
     width: 50%;
     height: 100%;
     position: relative;
@@ -102,11 +102,11 @@
     transition: all 1s ease;
     /* border: 3px solid blue; */
 }
-.banner_menuItem1:hover {
+.banner_menuItem2:hover {
     background-color: #004D7B;
     color: #ffffff;
 }
-.banner_menuItem2:hover {
+.banner_menuItem1:hover {
     background-color: #004D7B;
     color: #000000;
 }
@@ -220,7 +220,7 @@
 }
 
 .feature_description {
-    width: 75%;
+    width: 50%;
     height: 200px;
     color: black;
     font-size: 20px;
@@ -231,17 +231,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* border: 3px solid red; */
+    border: 3px solid red;
 }
 
 .feature_image {
-    width: 25%;
-    height: 100%;
-    background-image: url(/micro_feature_img.svg);
+    width: 50%;
+    height: 75%;
+    background-image: url(/helix_feature_img.svg);
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
-    /* border: 3px solid red; */
+    border: 3px solid red;
 }
 
 .common_container {
@@ -301,7 +301,7 @@
     height: 60%;
     position: relative;
     mix-blend-mode: darken;
-    background-image: url(/micro_apply_img.svg);
+    background-image: url(/helix_apply_img.svg);
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
@@ -321,8 +321,8 @@
 
 .build_image{
     width: 100%;
-    height: 400px;
-    background-image: url(/micro_build_img.svg);
+    height: 90%;
+    background-image: url(/helix_build_img.svg);
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
@@ -343,7 +343,7 @@
 .plan_image{
     width: 100%;
     height: 70%;
-    background-image: url(/micro_plan_img.svg);
+    background-image: url(/helix_plan_img.svg);
     background-size: cover;
     background-position: center;
     /* border: 3px solid green; */
@@ -352,31 +352,23 @@
 
 .explain_background{
     width: 80%;
-    height: 1100px;
+    height: 800px;
     display: flex;
     position: relative;
     justify-content: center;
+    align-items: center;
     gap: 20px;
     transition: all 1s ease;
     /* border: 3px solid red; */
 }
 
-.explain_image_container{
-    /* width: 10%; */
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    transition: all 1s ease;
-    border: 2px solid yellow;
-}
 .explain_image{
     width: 400px;
     height: 600px;
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 
