First draft completed

--- a/src/styles/helixPiles.module.css
+++ b/src/styles/helixPiles.module.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: space-around;
     transition: all 1s ease;
-    border: 2px solid violet;
+    /* border: 2px solid violet; */
 }
 
 .banner {
