--- a/src/styles/constructionPerformance.module.css
+++ b/src/styles/constructionPerformance.module.css
@@ -20,7 +20,7 @@
     justify-content: center;
     align-items: center;
     transition: all 1s ease;
-    border: 3px solid red;
+    /* border: 3px solid red; */
 }
 
 .main_image {
