--- a/src/styles/microPiles.module.css
+++ b/src/styles/microPiles.module.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     justify-content: space-around;
     transition: all 1s ease;
-    border: 2px solid violet;
+    /* border: 2px solid violet; */
 }
 
 .banner {
@@ -269,7 +269,7 @@
     display: flex;
     align-items: center;
     padding-left: 40px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     transition: all 1s ease;
 }
 
@@ -310,7 +310,7 @@
 
 .build_background{
     width: 80%;
-    height: 700px;
+    height: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -320,8 +320,8 @@
 }
 
 .build_image{
-    width: 100%;
-    height: 400px;
+    width: 90%;
+    height: 650px;
     background-image: url(/micro_build_img.svg);
     background-size: cover;
     background-position: center;
@@ -342,7 +342,7 @@
 
 .plan_image{
     width: 100%;
-    height: 70%;
+    height: 80%;
     background-image: url(/micro_plan_img.svg);
     background-size: cover;
     background-position: center;
@@ -368,7 +368,7 @@
     gap: 20px;
     align-items: center;
     transition: all 1s ease;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
 }
 .explain_image{
     width: 400px;
@@ -376,7 +376,7 @@
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 
