--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,6 +1,6 @@
 .footer_container {
     width: 100%;
-    height: 300px;
+    height: 250px;
     padding-left: 10%;
     position: relative;
     background: #373737;
@@ -29,6 +29,7 @@
     font-weight: 600;
     word-wrap: break-word;
     transition: all 1s ease; 
+    /* border: 1px solid red; */
 }
 
 .footer_content_container{
@@ -49,7 +50,7 @@
 
 @media (max-width: 480px) {
     .footer_container {
-        height: 150px;
+        height: 100px;
     }
     .footer_title_text{
         font-size: 12px;
@@ -69,7 +70,7 @@
 
   @media (min-width: 481px) and (max-width: 768px) {
     .footer_container {
-        height: 200px;
+        height: 150px;
     }
 
     .footer_title_text{
@@ -90,8 +91,9 @@
 
   @media (min-width: 769px) and (max-width: 1024px) {
     .footer_container {
-        height: 250px;
+        height: 200px;
     }
+
     .footer_title_text{
         font-size: 20px;
     }
