--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -39,7 +39,7 @@
 }
 
 .logo_text {
-    width: 90%;
+    width: 100%;
     color: black;
     font-size: 28px;
     font-family: 'Nanum Gothic';
@@ -52,6 +52,7 @@
 .spacer{
     width: 100px;
     height: 100px;
+    /* border: 2px solid red; */
 }
 
 .menu_wrapper {
@@ -59,6 +60,7 @@
     align-items: flex-start;
     gap: 18px; 
     display: flex;
+    /* border: 2px solid blue; */
 }
 
 .menuItem {
@@ -96,11 +98,9 @@
   }
 
 @media (max-width: 480px) {
-    .header_container {
-        flex-direction: column;
-    }
     .spacer{
-        height: 20px;
+        width: 45px;
+        height: 10px;
     }
     .logo_image{
         width: 30px; 
@@ -115,10 +115,8 @@
   }
 
   @media (min-width: 481px) and (max-width: 768px) {
-    .header_container {
-        flex-direction: column;
-    }
     .spacer{
+        width: 40px;
         height: 20px;
     }
     .logo_image{
