--- a/src/styles/item.module.css
+++ b/src/styles/item.module.css
@@ -10,8 +10,8 @@
 }
 
 .performance_image{
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0px;
     background-size: cover;
@@ -20,8 +20,8 @@
 }
 
 .layer{
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0px;
     background: rgba(0, 0, 0, 0.30);
@@ -40,19 +40,19 @@
 
 @media (max-width: 480px) {
     .container{
-        width: 80px;
-        height: 50px;
+        width: 90px;
+        height: 70px;
    }
 
-   .performance_image{
+   /* .performance_image{
        width: 80px;
        height: 50px;
-   }
+   } */
 
-   .layer{
+   /* .layer{
     width: 80px;
     height: 50px;
-   }
+   } */
 
    .text{
        font-size: 8px; 
