--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -20,6 +20,7 @@
     align-items: center;
     position: relative;
     transition: all 1.5s ease;
+    /* border: 2px solid red; */
 }
 
 .performance_text{
@@ -43,6 +44,17 @@
     /* border: 1px solid red; */
   } 
 
+  .flex_container_sub {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 2px;
+    transition: all 1.5s ease;
+    /* border: 1px solid red; */
+    display: none;
+  } 
     @media (max-width: 480px) {
         .performance_text{
             font-size: 12px;
@@ -51,7 +63,11 @@
             height: 250px;
         }
         .flex_container{
-            height: 50px;
+            height: 70px;
+        }
+        .flex_container_sub {
+            display: flex;
+            height: 70px;
         }
     }
 
