--- a/src/styles/constructionPerformance.module.css
+++ b/src/styles/constructionPerformance.module.css
@@ -25,23 +25,24 @@
 
 .main_image {
     width: 100%;
-    height: 520px;
+    height: 100%;
     top: 0px;
     position: absolute;
     background-image: url(/constructionPerformance_img.svg);
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
-
+    /* border: 2px solid green; */
 }
 
 .overlay {
     width: 100%;
-    height: 520px;
+    height: 100%;
     top: 0px;
     position: absolute;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%);
     transition: all 1s ease;
+    /* border: 2px solid blue; */
 }
 
 .overlay_text{
@@ -62,28 +63,33 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 40px;
+    /* gap: 20px; */
+    padding: 0% 0% 0% 0%;
+    margin: 20px 0px 20px 0px;
     transition: all 1s ease;
     /* border: 2px solid red; */
 }
 
 .img_container{
-    width: 80%;
-    height: 252px;
+    width: 90%;
+    height: 30%;
     position: relative;
     display: flex;
-    justify-content: center;
+    background-size: 100% 100%;
+    background-position: center;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 40px;
+    padding: 0;
+    margin: 0;
     transition: all 1s ease;
     /* border: 4px solid brown; */
 }
 
 .img {
-    width: 300px;
-    height: 252px;
+    width: 25%;
+    height: 90%;
     border: 1px solid black;
     background-size: cover;
     background-position: center;
@@ -100,50 +106,40 @@
 }
 
 @media (max-width: 480px) {
+    .banner_container {
+        height: 220px;
+    }
+    .overlay_text{
+        font-size: 18px;
+    }
+
     .img_wrapper{
-        height: 450px;
-        gap: 10px;
-    }
-    .img_container{
-        width: 80%;
-        height: 100px;
-        gap: 10px;
-    }
-    .img {
-        width: 150px;
-        height: 100px;
+        height: 350px;
     }
   }
 
   @media (min-width: 481px) and (max-width: 768px) {
+    .banner_container {
+        height: 320px;
+    }
+    .overlay_text{
+        font-size: 48px;
+    }
     .img_wrapper{
-        height: 650px;
-        gap: 20px;
+        height: 500px;
     }
 
-    .img_container{
-        width: 80%;
-        height: 150px;
-        gap: 20px;
-    }
-    .img {
-        width: 200px;
-        height: 150px;
-    }
   }
 
   @media (min-width: 769px) and (max-width: 1024px) {
+    .banner_container {
+        height: 420px;
+    }
+    .overlay_text{
+        font-size: 56px;
+    }
     .img_wrapper{
-        height: 800px;
-        gap: 30px;
+        height: 750px;
     }
-    .img_container{
-        width: 80%;
-        height: 200px;
-        gap: 30px;
-    }
-    .img {
-        width: 250px;
-        height: 200px;
-    }
+
   }
