--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,11 +1,8 @@
 .header_container {
     width: 100%; 
-    height: 10%;
-    padding-left: 2%; 
-    padding-right: 2%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    margin: 0px;
+    /* height: 10%; */
+    padding: 0% 2% 0% 2%;
+    /* margin: 0px; */
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -16,7 +13,6 @@
 }
 
 .logo_wrapper {
-    /* width: 20%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,21 +21,21 @@
     text-decoration: none;
     /* border: 2px solid green; */
     padding: 0.5%;
-    gap:4%
+    gap:3%
 }
 
 .logo_image{
-    width: 50px; 
-    height: 50px;
+    width: 45px; 
+    height: 45px;
     background-image: url('/gittan_logo.svg');
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center;
     transition: all 1s ease;
     /* border: 2px solid red; */
 }
 
 .logo_text {
-    width: 100%;
+    width: 90%;
     color: black;
     font-size: 28px;
     font-family: 'Nanum Gothic';
@@ -51,7 +47,7 @@
 
 .spacer{
     width: 100px;
-    height: 100px;
+    height: 74px;
     /* border: 2px solid red; */
 }
 
@@ -132,6 +128,10 @@
   }
 
   @media (min-width: 769px) and (max-width: 1024px) {
+    .spacer{
+        width: 40px;
+        height: 60px;
+    }
     .logo_text{
         font-size: 24px;
     }
