--- a/src/styles/item.module.css
+++ b/src/styles/item.module.css
@@ -17,6 +17,7 @@
     background-size: cover;
     background-position: center;
     transition: all 1s ease;
+    border: 2px solid yellow;
 }
 
 .layer{
@@ -43,16 +44,15 @@
         width: 90px;
         height: 70px;
    }
-
-   /* .performance_image{
+    .performance_image{
        width: 80px;
        height: 50px;
-   } */
+   } 
 
-   /* .layer{
+    .layer{
     width: 80px;
     height: 50px;
-   } */
+   } 
 
    .text{
        font-size: 8px; 
