--- a/src/styles/introduceCo.module.css
+++ b/src/styles/introduceCo.module.css
@@ -64,7 +64,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    /* gap: 10px; */
     transition: all 1s ease;
 }
 
@@ -88,7 +88,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 20px;
     gap: 10px;
     /* border: 2px solid green; */
     transition: all 1s ease;
@@ -135,7 +135,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 40px 0px 100px 0px;
+    margin: 20px 0px 20px 0px;
     /* border: 3px solid blue; */
     transition: all 1s ease;
 }
