--- a/src/styles/constructionPerformance.module.css
+++ b/src/styles/constructionPerformance.module.css
@@ -67,7 +67,7 @@
     align-items: center;
     /* gap: 20px; */
     padding: 0% 0% 0% 0%;
-    margin: 20px 0px 20px 0px;
+    margin: 20px 0px 100px 0%;
     transition: all 1s ease;
     /* border: 2px solid red; */
 }
@@ -98,6 +98,7 @@
     justify-content: center;
     align-items: center;
     color: transparent;
+    font-size: 16px;
 }
 
 .img:hover {
@@ -112,9 +113,12 @@
     .overlay_text{
         font-size: 18px;
     }
-
+    .img{
+        font-size: 8px;
+    }
     .img_wrapper{
         height: 350px;
+        margin-bottom: 20px;
     }
   }
 
@@ -124,6 +128,9 @@
     }
     .overlay_text{
         font-size: 40px;
+    }
+    .img{
+        font-size: 12px;
     }
     .img_wrapper{
         height: 500px;
@@ -137,6 +144,9 @@
     }
     .overlay_text{
         font-size: 48px;
+    }
+    .img{
+        font-size: 14px;
     }
     .img_wrapper{
         height: 750px;
