--- a/src/styles/estimate.module.css
+++ b/src/styles/estimate.module.css
@@ -25,6 +25,8 @@
     width: 100%;
     height: 100%;
     background-image: url(/popup_img.svg);
+    background-size: cover;
+    background-position: center;
     filter: brightness(50%);
     transition: all 1s ease;
   }
