--- a/src/styles/microPiles.module.css
+++ b/src/styles/microPiles.module.css
@@ -181,7 +181,6 @@
     position: relative;
     display: flex;
     gap: 1%;
-    /* padding: 0px 5% 0px 5%; */
     align-items: center;
     transition: all 1s ease;
     /* border: 3px solid red; */
@@ -207,7 +206,6 @@
     font-family: Nanum Gothic;
     font-weight: 400;
     word-wrap: break-word;
-    padding: 0% 2% 0% 2%;
     transition: all 1s ease;
     /* border: 3px solid green; */
 }
@@ -250,7 +248,7 @@
 
 .feature_image {
     width: 15%;
-    height: 38%; 
+    height: 20%; 
     padding: 10%;
     background-image: url(/micro_feature_img.svg);
     background-size: 100% 100%;
@@ -278,7 +276,7 @@
     position: relative;
     background-color: #004D7B;
     color: white;
-    font-size: 32px;
+    font-size: 48px;
     font-family: Nanum Gothic;
     font-size: 400;
     word-wrap: break-word;
@@ -298,7 +296,8 @@
     transition: all 1s ease;
     /* border: 2px solid red; */
     display: flex;
-    /* justify-content: space-between; */
+    justify-content: space-between;
+    gap: 3%;
 }
 
 .apply_description {
@@ -312,12 +311,16 @@
     word-wrap: break-word;
     transition: all 1s ease;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     /* border: 2px solid green; */
 }
-
+.apply_description ul{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+    /* border: 2px solid red; */
+}
 .apply_image {
     width: 40%;
     height: 60%;
@@ -463,11 +466,12 @@
         font-size: 10px;
     }
     .common_container{
+        
         margin-bottom: 20px;
     }
     .common_title{
-        height: 60px;
-        font-size: 20px;
+        height: 40px;
+        font-size: 16px;
     }
 
     .apply_background{
@@ -476,6 +480,9 @@
 
     .apply_description {
         font-size: 10px;
+    }
+    .apply_description ul{
+        padding-left: 20px;
     }
 
     .build_background{
