--- a/src/styles/page.module.css
+++ b/src/styles/page.module.css
@@ -7,7 +7,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     /* border: 2px solid violet; */
 }
 
@@ -21,6 +21,7 @@
     position: relative;
     transition: all 1.5s ease;
     /* border: 2px solid red; */
+    margin-bottom: 100px;
 }
 
 .performance_text{
@@ -37,12 +38,12 @@
     width: 100%;
     height: 200px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 2%;
     transition: all 1.5s ease;
     /* border: 1px solid red; */
-    padding: 0% 5% 0% 5%;
+    /* padding: 0% 5% 0% 5%; */
   } 
 
   .flex_container_sub {
@@ -54,7 +55,7 @@
     gap: 2%;
     transition: all 1.5s ease;
     /* border: 1px solid red; */
-    padding: 0% 5% 0% 5%;
+    /* padding: 0% 5% 0% 5%; */
   } 
 
   @media (max-width: 480px) {
@@ -63,6 +64,7 @@
         }
         .main_container{
             height: 250px;
+            margin-bottom: 0px;
         }
         .flex_container{
             height: 70px;
@@ -79,6 +81,7 @@
     }
     .main_container{
         height: 350px;
+        margin-bottom: 25px;
     }
 
     .flex_container{
@@ -96,6 +99,7 @@
 
     .main_container{
         height: 400px;
+        margin-bottom: 50px;
     }
 
     .flex_container{
