--- a/src/styles/microPiles.module.css
+++ b/src/styles/microPiles.module.css
@@ -457,7 +457,9 @@
     .feature_text {
         font-size: 16px;
     }
-
+    .feature_image{
+        height: 40%;
+    }
     .feature_background {
         height: 300px;
     }
